{
  "version": 4,
  "terraform_version": "1.5.1",
  "serial": 30,
  "lineage": "881abeb1-4331-8726-0007-37b5fe6fcc57",
  "resources": [
    {
      "module": "module.vpc_east",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].east",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:435896129597:internet-gateway/igw-0176a30c19b459586",
            "id": "igw-0176a30c19b459586",
            "owner_id": "435896129597",
            "tags": {
              "Environment": "prod",
              "Name": "prod-vpc-east",
              "Region": "east",
              "Team": "infra"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "prod-vpc-east",
              "Region": "east",
              "Team": "infra"
            },
            "vpc_id": "vpc-0b26c89e1bfa5da52"
          },
          "dependencies": [
            "module.vpc_east.aws_vpc.this",
            "module.vpc_east.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_east",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].east",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0176a30c19b459586",
            "id": "r-rtb-00860abc5681f6bde1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-00860abc5681f6bde",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_east.aws_internet_gateway.this",
            "module.vpc_east.aws_route_table.public",
            "module.vpc_east.aws_vpc.this",
            "module.vpc_east.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_east",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].east",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:435896129597:route-table/rtb-0df83653910dac41b",
            "id": "rtb-0df83653910dac41b",
            "owner_id": "435896129597",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "prod",
              "Name": "prod-vpc-east-private-us-east-1a",
              "Region": "east",
              "Team": "infra"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "prod-vpc-east-private-us-east-1a",
              "Region": "east",
              "Team": "infra"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b26c89e1bfa5da52"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.azs_east",
            "module.vpc_east.aws_vpc.this",
            "module.vpc_east.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:435896129597:route-table/rtb-03e07470605076b77",
            "id": "rtb-03e07470605076b77",
            "owner_id": "435896129597",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "prod",
              "Name": "prod-vpc-east-private-us-east-1b",
              "Region": "east",
              "Team": "infra"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "prod-vpc-east-private-us-east-1b",
              "Region": "east",
              "Team": "infra"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b26c89e1bfa5da52"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.azs_east",
            "module.vpc_east.aws_vpc.this",
            "module.vpc_east.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_east",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].east",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:435896129597:route-table/rtb-00860abc5681f6bde",
            "id": "rtb-00860abc5681f6bde",
            "owner_id": "435896129597",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "prod",
              "Name": "prod-vpc-east-public",
              "Region": "east",
              "Team": "infra"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "prod-vpc-east-public",
              "Region": "east",
              "Team": "infra"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b26c89e1bfa5da52"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_east.aws_vpc.this",
            "module.vpc_east.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_east",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].east",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0447a6c78dd990e16",
            "route_table_id": "rtb-0df83653910dac41b",
            "subnet_id": "subnet-013a3bca91a18bb6b"
          },
          "dependencies": [
            "data.aws_availability_zones.azs_east",
            "module.vpc_east.aws_route_table.database",
            "module.vpc_east.aws_route_table.private",
            "module.vpc_east.aws_subnet.database",
            "module.vpc_east.aws_vpc.this",
            "module.vpc_east.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03db75c35ac50973f",
            "route_table_id": "rtb-03e07470605076b77",
            "subnet_id": "subnet-014752edeade131f4"
          },
          "dependencies": [
            "data.aws_availability_zones.azs_east",
            "module.vpc_east.aws_route_table.database",
            "module.vpc_east.aws_route_table.private",
            "module.vpc_east.aws_subnet.database",
            "module.vpc_east.aws_vpc.this",
            "module.vpc_east.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_east",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].east",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03795e7eaadc7f146",
            "route_table_id": "rtb-00860abc5681f6bde",
            "subnet_id": "subnet-0400ffc32258a8542"
          },
          "dependencies": [
            "data.aws_availability_zones.azs_east",
            "module.vpc_east.aws_route_table.public",
            "module.vpc_east.aws_subnet.public",
            "module.vpc_east.aws_vpc.this",
            "module.vpc_east.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0409db433462639c0",
            "route_table_id": "rtb-00860abc5681f6bde",
            "subnet_id": "subnet-0264f62e8c5de4ea8"
          },
          "dependencies": [
            "data.aws_availability_zones.azs_east",
            "module.vpc_east.aws_route_table.public",
            "module.vpc_east.aws_subnet.public",
            "module.vpc_east.aws_vpc.this",
            "module.vpc_east.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_east",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].east",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:435896129597:subnet/subnet-013a3bca91a18bb6b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.10.8.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-013a3bca91a18bb6b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "435896129597",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod",
              "Name": "prod-vpc-east-db-us-east-1a",
              "Region": "east",
              "Team": "infra"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "prod-vpc-east-db-us-east-1a",
              "Region": "east",
              "Team": "infra"
            },
            "vpc_id": "vpc-0b26c89e1bfa5da52"
          },
          "dependencies": [
            "data.aws_availability_zones.azs_east",
            "module.vpc_east.aws_vpc.this",
            "module.vpc_east.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:435896129597:subnet/subnet-014752edeade131f4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.10.9.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-014752edeade131f4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "435896129597",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod",
              "Name": "prod-vpc-east-db-us-east-1b",
              "Region": "east",
              "Team": "infra"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "prod-vpc-east-db-us-east-1b",
              "Region": "east",
              "Team": "infra"
            },
            "vpc_id": "vpc-0b26c89e1bfa5da52"
          },
          "dependencies": [
            "data.aws_availability_zones.azs_east",
            "module.vpc_east.aws_vpc.this",
            "module.vpc_east.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_east",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].east",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:435896129597:subnet/subnet-0400ffc32258a8542",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.10.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0400ffc32258a8542",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "435896129597",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod",
              "Name": "prod-vpc-east-public-us-east-1a",
              "Region": "east",
              "Team": "infra"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "prod-vpc-east-public-us-east-1a",
              "Region": "east",
              "Team": "infra"
            },
            "vpc_id": "vpc-0b26c89e1bfa5da52"
          },
          "dependencies": [
            "data.aws_availability_zones.azs_east",
            "module.vpc_east.aws_vpc.this",
            "module.vpc_east.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:435896129597:subnet/subnet-0264f62e8c5de4ea8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.10.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0264f62e8c5de4ea8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "435896129597",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod",
              "Name": "prod-vpc-east-public-us-east-1b",
              "Region": "east",
              "Team": "infra"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "prod-vpc-east-public-us-east-1b",
              "Region": "east",
              "Team": "infra"
            },
            "vpc_id": "vpc-0b26c89e1bfa5da52"
          },
          "dependencies": [
            "data.aws_availability_zones.azs_east",
            "module.vpc_east.aws_vpc.this",
            "module.vpc_east.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_east",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].east",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:435896129597:vpc/vpc-0b26c89e1bfa5da52",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-04be5e4db13ccf6fa",
            "default_route_table_id": "rtb-0aa92e0971ba126ba",
            "default_security_group_id": "sg-03b517905455b023f",
            "dhcp_options_id": "dopt-0706dae27e5631455",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b26c89e1bfa5da52",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0aa92e0971ba126ba",
            "owner_id": "435896129597",
            "tags": {
              "Environment": "prod",
              "Name": "prod-vpc-east",
              "Region": "east",
              "Team": "infra"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "prod-vpc-east",
              "Region": "east",
              "Team": "infra"
            }
          }
        }
      ]
    },
    {
      "module": "module.vpc_west",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].west",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:435896129597:internet-gateway/igw-05ba30d7e5b86774a",
            "id": "igw-05ba30d7e5b86774a",
            "owner_id": "435896129597",
            "tags": {
              "Environment": "prod",
              "Name": "prod-vpc-west",
              "Region": "west",
              "Team": "infra"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "prod-vpc-west",
              "Region": "west",
              "Team": "infra"
            },
            "vpc_id": "vpc-0eb08153bd706cc5b"
          },
          "dependencies": [
            "module.vpc_west.aws_vpc.this",
            "module.vpc_west.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_west",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].west",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-05ba30d7e5b86774a",
            "id": "r-rtb-05a2810cd979a1def1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-05a2810cd979a1def",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_west.aws_internet_gateway.this",
            "module.vpc_west.aws_route_table.public",
            "module.vpc_west.aws_vpc.this",
            "module.vpc_west.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_west",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].west",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:435896129597:route-table/rtb-04a0f89ed47df48ef",
            "id": "rtb-04a0f89ed47df48ef",
            "owner_id": "435896129597",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "prod",
              "Name": "prod-vpc-west-private-us-west-1a",
              "Region": "west",
              "Team": "infra"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "prod-vpc-west-private-us-west-1a",
              "Region": "west",
              "Team": "infra"
            },
            "timeouts": null,
            "vpc_id": "vpc-0eb08153bd706cc5b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.azs_west",
            "module.vpc_west.aws_vpc.this",
            "module.vpc_west.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:435896129597:route-table/rtb-03d57a27930021139",
            "id": "rtb-03d57a27930021139",
            "owner_id": "435896129597",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "prod",
              "Name": "prod-vpc-west-private-us-west-1b",
              "Region": "west",
              "Team": "infra"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "prod-vpc-west-private-us-west-1b",
              "Region": "west",
              "Team": "infra"
            },
            "timeouts": null,
            "vpc_id": "vpc-0eb08153bd706cc5b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.azs_west",
            "module.vpc_west.aws_vpc.this",
            "module.vpc_west.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_west",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].west",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:435896129597:route-table/rtb-05a2810cd979a1def",
            "id": "rtb-05a2810cd979a1def",
            "owner_id": "435896129597",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "prod",
              "Name": "prod-vpc-west-public",
              "Region": "west",
              "Team": "infra"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "prod-vpc-west-public",
              "Region": "west",
              "Team": "infra"
            },
            "timeouts": null,
            "vpc_id": "vpc-0eb08153bd706cc5b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_west.aws_vpc.this",
            "module.vpc_west.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_west",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].west",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-023ed91e6b61db42d",
            "route_table_id": "rtb-04a0f89ed47df48ef",
            "subnet_id": "subnet-04177f06d187c8555"
          },
          "dependencies": [
            "data.aws_availability_zones.azs_west",
            "module.vpc_west.aws_route_table.database",
            "module.vpc_west.aws_route_table.private",
            "module.vpc_west.aws_subnet.database",
            "module.vpc_west.aws_vpc.this",
            "module.vpc_west.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05a641605fd4c3a6d",
            "route_table_id": "rtb-03d57a27930021139",
            "subnet_id": "subnet-03bae284db68ec1cc"
          },
          "dependencies": [
            "data.aws_availability_zones.azs_west",
            "module.vpc_west.aws_route_table.database",
            "module.vpc_west.aws_route_table.private",
            "module.vpc_west.aws_subnet.database",
            "module.vpc_west.aws_vpc.this",
            "module.vpc_west.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_west",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].west",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00948a72bee1e8b92",
            "route_table_id": "rtb-05a2810cd979a1def",
            "subnet_id": "subnet-0a5751a233dbaf294"
          },
          "dependencies": [
            "data.aws_availability_zones.azs_west",
            "module.vpc_west.aws_route_table.public",
            "module.vpc_west.aws_subnet.public",
            "module.vpc_west.aws_vpc.this",
            "module.vpc_west.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bc78565c706c41b5",
            "route_table_id": "rtb-05a2810cd979a1def",
            "subnet_id": "subnet-0f9e53099cb0a1998"
          },
          "dependencies": [
            "data.aws_availability_zones.azs_west",
            "module.vpc_west.aws_route_table.public",
            "module.vpc_west.aws_subnet.public",
            "module.vpc_west.aws_vpc.this",
            "module.vpc_west.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_west",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].west",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:435896129597:subnet/subnet-04177f06d187c8555",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.11.8.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04177f06d187c8555",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "435896129597",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod",
              "Name": "prod-vpc-west-db-us-west-1a",
              "Region": "west",
              "Team": "infra"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "prod-vpc-west-db-us-west-1a",
              "Region": "west",
              "Team": "infra"
            },
            "vpc_id": "vpc-0eb08153bd706cc5b"
          },
          "dependencies": [
            "data.aws_availability_zones.azs_west",
            "module.vpc_west.aws_vpc.this",
            "module.vpc_west.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:435896129597:subnet/subnet-03bae284db68ec1cc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.11.9.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03bae284db68ec1cc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "435896129597",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod",
              "Name": "prod-vpc-west-db-us-west-1b",
              "Region": "west",
              "Team": "infra"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "prod-vpc-west-db-us-west-1b",
              "Region": "west",
              "Team": "infra"
            },
            "vpc_id": "vpc-0eb08153bd706cc5b"
          },
          "dependencies": [
            "data.aws_availability_zones.azs_west",
            "module.vpc_west.aws_vpc.this",
            "module.vpc_west.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_west",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].west",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:435896129597:subnet/subnet-0a5751a233dbaf294",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.11.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a5751a233dbaf294",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "435896129597",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod",
              "Name": "prod-vpc-west-public-us-west-1a",
              "Region": "west",
              "Team": "infra"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "prod-vpc-west-public-us-west-1a",
              "Region": "west",
              "Team": "infra"
            },
            "vpc_id": "vpc-0eb08153bd706cc5b"
          },
          "dependencies": [
            "data.aws_availability_zones.azs_west",
            "module.vpc_west.aws_vpc.this",
            "module.vpc_west.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:435896129597:subnet/subnet-0f9e53099cb0a1998",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.11.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f9e53099cb0a1998",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "435896129597",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod",
              "Name": "prod-vpc-west-public-us-west-1b",
              "Region": "west",
              "Team": "infra"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "prod-vpc-west-public-us-west-1b",
              "Region": "west",
              "Team": "infra"
            },
            "vpc_id": "vpc-0eb08153bd706cc5b"
          },
          "dependencies": [
            "data.aws_availability_zones.azs_west",
            "module.vpc_west.aws_vpc.this",
            "module.vpc_west.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_west",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].west",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:435896129597:vpc/vpc-0eb08153bd706cc5b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.11.0.0/16",
            "default_network_acl_id": "acl-0c68e6f81a6f7788c",
            "default_route_table_id": "rtb-0d1cede76fea47fd0",
            "default_security_group_id": "sg-00bd723161e7e0646",
            "dhcp_options_id": "dopt-02de70e071265db8d",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0eb08153bd706cc5b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d1cede76fea47fd0",
            "owner_id": "435896129597",
            "tags": {
              "Environment": "prod",
              "Name": "prod-vpc-west",
              "Region": "west",
              "Team": "infra"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "prod-vpc-west",
              "Region": "west",
              "Team": "infra"
            }
          }
        }
      ]
    }
  ]
}